# word-agent-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: demo.py
src/word_agent_mcp/: __init__.py  revisions.py  server.py
src/word_agent_mcp/backend/: __init__.py  base.py  ooxml.py
tests/: test_ooxml_backend.py
