[project]
name = "word-agent-mcp"
version = "0.1.0"
description = "MCP server that lets an AI agent edit Word documents with track changes (律师版 Word Agent 的文档操作层)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "python-docx>=1.1.2",
    "lxml>=5.0",
]

[project.scripts]
word-agent-mcp = "word_agent_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/word_agent_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
